src/objects/SDC__MappingConfig__c.object
<CustomObject>
    <description>for mapping Configuration</description>
    <fields>
        <fullName>SDC__MapData__c</fullName>
        <label>MapData</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDC__MapName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>MapName</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SDC__Pk_MapId__c</fullName>
        <description>map primary key</description>
        <displayFormat>A-{0000}</displayFormat>
        <inlineHelpText>map primary key</inlineHelpText>
        <label>Pk_MapId</label>
        <type>AutoNumber</type>
    </fields>
    <label>MappingConfig</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>